@@ -1,4 +1,5 @@
 3.2
+ * Add requireAuthorization method to IAuthorizer (CASSANDRA-10852)
  * Fix CassandraVersion to accept x.y version string (CASSANDRA-10931)
  * Add forceUserDefinedCleanup to allow more flexible cleanup (CASSANDRA-10708)
  * (cqlsh) allow setting TTL with COPY (CASSANDRA-9494)
